// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCi > snapshot: all jobs, matrix, approve, en 1`] = `
"# Generated by https://rs256.net/actions/ - edit freely.
# Checks that run on every pull request. The jobs are independent so one run
# reports every failure at once.
# https://docs.github.com/actions/reference/workflows-and-actions/workflow-syntax
name: CI
on:
  pull_request:
    branches: [main]
# No permissions by default; every job grants only what it needs.
permissions: {}
concurrency:
  group: "ci-\${{ github.event.pull_request.number }}"
  cancel-in-progress: true
jobs:
  # Reports style problems without holding up the other checks.
  lint:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    strategy:
      matrix:
        node-version: [20, 22, 24]
    steps:
      - uses: actions/checkout@v7
      - uses: actions/setup-node@v7
        with:
          node-version: "\${{ matrix.node-version }}"
          cache: npm
      - run: npm ci
      - run: npm run lint
  # Runs the test suite.
  test:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    strategy:
      matrix:
        node-version: [20, 22, 24]
    steps:
      - uses: actions/checkout@v7
      - uses: actions/setup-node@v7
        with:
          node-version: "\${{ matrix.node-version }}"
          cache: npm
      - run: npm ci
      - run: npm test
  # Confirms the project still builds.
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    strategy:
      matrix:
        node-version: [20, 22, 24]
    steps:
      - uses: actions/checkout@v7
      - uses: actions/setup-node@v7
        with:
          node-version: "\${{ matrix.node-version }}"
          cache: npm
      - run: npm ci
      - run: npm run build
  # Merges only when every check above succeeded and the pull request came from Dependabot.
  auto-merge:
    needs: [lint, test, build]
    if: github.actor == 'dependabot[bot]'
    runs-on: ubuntu-latest
    # A run triggered by Dependabot gets a read-only GITHUB_TOKEN, so the write scopes are granted
    # here.
    permissions:
      contents: write
      pull-requests: write
    steps:
      - name: Fetch Dependabot metadata
        id: metadata
        uses: dependabot/fetch-metadata@v3
        with:
          github-token: "\${{ secrets.GITHUB_TOKEN }}"
      # Only needed when the branch protection rule requires an approval.
      - name: Approve
        if: contains(fromJSON('["version-update:semver-minor"]'), steps.metadata.outputs.update-type)
        run: gh pr review --approve "$PR_URL"
        env:
          PR_URL: "\${{ github.event.pull_request.html_url }}"
          GH_TOKEN: "\${{ secrets.GITHUB_TOKEN }}"
      # Major updates are left for a human to review.
      - name: Merge
        if: contains(fromJSON('["version-update:semver-minor"]'), steps.metadata.outputs.update-type)
        run: gh pr merge --squash "$PR_URL"
        env:
          PR_URL: "\${{ github.event.pull_request.html_url }}"
          GH_TOKEN: "\${{ secrets.GITHUB_TOKEN }}"
"
`;

exports[`generateCi > snapshot: default jobs with auto-merge, ja 1`] = `
"# https://rs256.net/actions/ で生成。自由に編集してよい。
# PR ごとに走らせる検査。ジョブ間に依存を張っていないため、
# 1 回の実行で失敗をまとめて確認できる。
# https://docs.github.com/actions/reference/workflows-and-actions/workflow-syntax
name: CI
on:
  pull_request:
    branches: [main]
# 既定は権限なし。各ジョブで必要な分だけ付与する。
permissions: {}
concurrency:
  group: "ci-\${{ github.event.pull_request.number }}"
  cancel-in-progress: true
jobs:
  # テストを実行する。
  test:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - uses: actions/checkout@v7
      - uses: actions/setup-node@v7
        with:
          node-version: 22
          cache: npm
      - run: npm ci
      - run: npm test
  # 成果物がビルドできることを確認する。
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - uses: actions/checkout@v7
      - uses: actions/setup-node@v7
        with:
          node-version: 22
          cache: npm
      - run: npm ci
      - run: npm run build
  # 上の検査がすべて通り、かつ Dependabot の PR のときだけマージする。
  auto-merge:
    needs: [test, build]
    if: github.actor == 'dependabot[bot]'
    runs-on: ubuntu-latest
    # Dependabot 起点の実行では GITHUB_TOKEN が既定 read-only のため、ここで明示的に付与する。
    permissions:
      contents: write
      pull-requests: write
    steps:
      - name: Fetch Dependabot metadata
        id: metadata
        uses: dependabot/fetch-metadata@v3
        with:
          github-token: "\${{ secrets.GITHUB_TOKEN }}"
      # メジャー更新は自動マージせず人力レビューに回す。
      - name: Merge
        if: steps.metadata.outputs.update-type != 'version-update:semver-major'
        run: gh pr merge --squash "$PR_URL"
        env:
          PR_URL: "\${{ github.event.pull_request.html_url }}"
          GH_TOKEN: "\${{ secrets.GITHUB_TOKEN }}"
"
`;
